<resources>
    <string name="app_name">原型</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add">添加</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="hms_abort">Stop</string>
    <string name="hms_abort_message">Stop downloading?</string>
    <string name="hms_cancel">Cancel</string>
    <string name="hms_check_failure">Failed to check for updates.</string>
    <string name="hms_check_no_update">You are already using the latest version.</string>
    <string name="hms_checking">Checking for updates…</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_download_failure">Failed to download Huawei Mobile Services package.</string>
    <string name="hms_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="hms_download_retry">Download failed. Try again?</string>
    <string name="hms_downloading">"Downloading Huawei Mobile Services
progress: %d%%"</string>
    <string name="hms_install">Install</string>
    <string name="hms_install_message">Huawei Mobile Services must be installed to use this feature. Install?</string>
    <string name="hms_retry">Retry</string>
    <string name="hms_update">Update</string>
    <string name="hms_update_message">Update to the latest version of Huawei Mobile Services to use this feature. Update now?</string>
    <string name="hms_update_title">Huawei Mobile Services</string>
    <string name="account_setting_title">账号设置</string>
    <string name="activity_sticker">活动贴纸</string>
    <string name="activity_title">专题活动</string>
    <string name="addTag">添加标签</string>
    <string name="add_button_string">点击添加：</string>
    <string name="add_friend_finsh">完成</string>
    <string name="add_name">创建用户名</string>
    <string name="add_password">请输入密码</string>
    <string name="add_original_password">请输入原密码</string>
    <string name="add_new_password">请输入新密码</string>
    <string name="add_re_new_password">请重新输入新密码</string>
    <string name="add_price_tag">添加价格标签</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_tips">"点击添加标签会让帖子给更多人看到
简洁而准确的标签效果更好哦~"</string>
    <string name="add_text_template">添加\"%s\"</string>
    <string name="address">地区</string>
    <string name="addtag_hint">自定义输入标签或者选择 (可多选)</string>
    <string name="addtag_hottag">热门标签</string>
    <string name="album">专辑</string>
    <string name="allGood">所有商品</string>
    <string name="app_download_url">http://t.cn/RPTJCEp</string>
    <string name="app_logo_name">小红书购物笔记</string>
    <string name="app_profile_url">http://www.xiaohongshu.com/mobile/profile/index?oid=user.%s</string>
    <string name="app_tip">提示</string>
    <string name="area_brand_desc_info">%1$s条笔记 %2$s个粉丝</string>
    <string name="attention">+ 关注</string>
    <string name="attentioned">已关注</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_complete">授权成功，正在跳转后续操作…</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_loading">正在获取授权...</string>
    <string name="bigimg_viewpager_cache">(%1$d张缓存图片)</string>
    <string name="bigimg_viewpager_collect">(%1$d张收藏图片)</string>
    <string name="bigimg_viewpager_vip">(%1$d/%2$d)</string>
    <string name="bind_list_title">帐号绑定</string>
    <string name="bind_merge_tips">设置%1$s账号为主账号后，小红书数据将以%1$s账号为准，以后可以通过以上%1$s账号和%2$s账号登录小红书，如有不明之处可通过下方按钮与薯队长联系。</string>
    <string name="bind_now">马上绑定</string>
    <string name="bind_phone_ok">验证并绑定手机号</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="bind_success_tips">帐号绑定成功</string>
    <string name="bind_success_title">帐号绑定成功</string>
    <string name="bind_to_now">绑定至当前帐号</string>
    <string name="board_fans_count">粉丝 · %d</string>
    <string name="board_get">收藏</string>
    <string name="board_get_bar">收藏</string>
    <string name="board_getted">已收藏</string>
    <string name="board_notes_count">笔记 · %d</string>
    <string name="brand">品牌</string>
    <string name="brand_desc_info">%1$d条笔记 %2$d个被赞</string>
    <string name="brand_search_result">品牌搜索结果</string>
    <string name="brand_search_result_title">品牌搜索结果</string>
    <string name="btn_delete">删除贴纸</string>
    <string name="btn_delete_wish_list">删除专辑</string>
    <string name="btn_downloding">正在下载</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_finish">完成</string>
    <string name="btn_has_subscribe">已订阅</string>
    <string name="btn_manage">管理</string>
    <string name="btn_save">保存</string>
    <string name="btn_share_wish_list">分享专辑</string>
    <string name="btn_subscribe">订阅</string>
    <string name="btn_ver">验证</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="check_price_tip">输入的价格无效，请检查重新输入</string>
    <string name="china_name">中国</string>
    <string name="chose_address">地区</string>
    <string name="clean_cache_tip">确定清除应用缓存吗？</string>
    <string name="clear_search_history">清空记录...</string>
    <string name="click">点击</string>
    <string name="click_retry">点击重试</string>
    <string name="close">关闭</string>
    <string name="comment_delete_msg">是否要删除这条评论？</string>
    <string name="comment_hint">有什么想说的?</string>
    <string name="comment_like_rep">%1$s赞了%2$s</string>
    <string name="comment_rep">%1$s评论了%2$s</string>
    <string name="comment_rep_for">回复了%s:</string>
    <string name="comment_rep_title">回复%s:</string>
    <string name="comment_success_tips">评论成功</string>
    <string name="comment_title">评论</string>
    <string name="comment_title_like">赞</string>
    <string name="comment_unlike">取消赞</string>
    <string name="comment_user_who">回复了</string>
    <string name="comments_title_all">所有评论</string>
    <string name="comments_title_hot">热门评论</string>
    <string name="common_add">添加</string>
    <string name="common_btn_back">返回</string>
    <string name="common_btn_canal">取消</string>
    <string name="common_btn_del">删除</string>
    <string name="common_btn_enter">确定</string>
    <string name="common_btn_look">查看笔记</string>
    <string name="common_btn_look_comment">查看评论</string>
    <string name="common_btn_rep">回复</string>
    <string name="common_btn_report">举报</string>
    <string name="common_copy">复制</string>
    <string name="enter_xiaohongshu">，进入小红书</string>
    <string name="login">登录</string>
    <string name="login_with_qzone">QQ</string>
    <string name="login_with_sina_weibo">微博</string>
    <string name="login_with_wechat">微信</string>
    <string name="myprofile_text_book">我的笔记</string>
    <string name="myprofile_text_star">我的收藏</string>
    <string name="register_quick">快速注册</string>
    <string name="share_subject">分享</string>
    <string name="wish_describe_hint">简单介绍一下你的专辑吧</string>
    <string name="wish_tip_describe">简介</string>
    <string name="wish_tip_private">仅自己可见</string>
    <string name="wish_tip_title">标题</string>
    <string name="wish_title_hint">为你的专辑添加一个标题</string>
    <string name="address_book_setting_title">通讯录设置</string>
    <string name="at_notification_setting_title">\@通知设置</string>
    <string name="comment_setting_title">评论设置</string>
    <string name="login_with_phone">手机</string>
    <string name="only_follow_me_can_comment">仅我关注的人可以评论我的笔记</string>
    <string name="only_follow_me_receive_notification">仅我关注的人可以@我</string>
    <string name="red_select_member">REDclub 会员</string>
    <string name="setting_about">关于小红书</string>
    <string name="setting_account_bind">账号绑定</string>
    <string name="setting_account_info">个人资料</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_logout">登出账户</string>
    <string name="setting_modify_password">修改密码</string>
    <string name="setting_my_draft">我的草稿</string>
    <string name="setting_my_liked">我赞过的</string>
    <string name="setting_notify">新消息通知</string>
    <string name="setting_privacy">隐私设置</string>
    <string name="setting_rank">鼓励一下</string>
    <string name="setting_subtitle_account">账号</string>
    <string name="setting_subtitle_setting">设置</string>
    <string name="setting_subtitle_support">支持</string>
    <string name="switch_allow_address_book_add_friend">允许通过手机通讯录加我为好友</string>
    <string name="switch_allow_weibo_add_friend">允许通过微博加我为好友</string>
    <string name="text_intercept_register_style_community">过去24小时,超过5万人成功注册小红书</string>
    <string name="weibo_setting_title">微博设置</string>
</resources>