<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/ic_header"
        layout="@layout/ic_header" />

    <ScrollView
        android:id="@+id/sv_view"
        android:scrollbars="none"
        android:fadingEdge="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizon_line"
            android:showDividers="middle">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/setting_cells"
                android:background="@drawable/common_bg_round_white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_horizon_line"
                android:showDividers="middle" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_subtitle_account"
                style="@style/SettingSubTitle" />

            <FrameLayout
                android:id="@+id/btn_draft"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="clickDrafts">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_my_draft"
                    style="@style/SettingContent" />

                <TextView
                    android:layout_gravity="center|right"
                    android:id="@+id/draft_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30.0dip"
                    android:text="2" />
            </FrameLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_my_liked"
                android:onClick="clickMyLiked"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_account_info"
                android:onClick="clickModifyAccount"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_account_bind"
                android:onClick="clickBindAccount"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_modify_password"
                android:onClick="clickModifyPassword"
                style="@style/SettingContent" />

            <TextView
                android:id="@+id/ac_setting_membership_layout"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_select_member"
                android:onClick="clickREDSelectMember"
                style="@style/SettingContent" />

            <TextView
                android:id="@+id/setting_events_layout"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="clickCurrentEvents"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_subtitle_setting"
                style="@style/SettingSubTitle" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_privacy"
                android:onClick="clickPrivacy"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_notify"
                android:onClick="clickNotify"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_cache"
                android:onClick="clickCleanCache"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_subtitle_support"
                style="@style/SettingSubTitle" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_rank"
                android:onClick="clickRankApp"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_about"
                android:onClick="clickAbout"
                style="@style/SettingContent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_feedback"
                android:onClick="clickFeedback"
                style="@style/SettingContent" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20.0dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_logout"
                android:onClick="clickLogout"
                style="@style/SettingContent" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20.0dip" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_dev"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_horizon_line"
                android:showDividers="middle">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="开发者模式"
                    android:onClick="clickEnterDev"
                    style="@style/SettingContent" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="退出开发者模式"
                    android:onClick="clickCloseDev"
                    style="@style/SettingContent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>