<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/btn_register"
        android:background="@drawable/common_bg_all_round_red"
        android:paddingLeft="40.0dip"
        android:paddingTop="10.0dip"
        android:paddingRight="40.0dip"
        android:paddingBottom="10.0dip"
        android:layout_width="240.0dip"
        android:layout_height="wrap_content"
        android:text="@string/register_quick"
        style="@style/TextLarge" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="240.0dip"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="16.0dip"
            android:paddingBottom="16.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            style="@style/TextSmall" />

        <TextView
            android:textColor="@color/base_red"
            android:id="@+id/btn_login"
            android:paddingLeft="4.0dip"
            android:paddingTop="16.0dip"
            android:paddingBottom="16.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/TextSmall" />

        <TextView
            android:paddingTop="16.0dip"
            android:paddingBottom="16.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_xiaohongshu"
            style="@style/TextSmall" />
    </LinearLayout>
</LinearLayout>